--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
     <div class="container">
         <div class="nav">
             <a onclick="renderIndex()">
-                <img src="img/2020-10-21 162816.png" alt="ShinigamiStore" class="logo">
+                <img src="img/LOGO.png" alt="ShinigamiStore" class="logo">
             </a>
             <ul class="menu">
                 <li class="lil">
@@ -153,7 +153,7 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
             <ul>
                 <li>
                     <div class="all-bask">
-                        <a onclick="renderCart()"><img class="basket" src="img/png-transparent-shopping-cart-tablet4u-computer-icons-online-shopping-shopping-cart-angle-shopping-c.png" alt=""></a>
+                        <a onclick="renderCart()"><img class="basket" src="img/png-transparent-shopping-cart-tablet4u-computer-icons-online-shopping-shopping-cart-angle-shopping-c.png" style="width: 30px; height: 30px" alt=""></a>
                         <div class="num">
 
                             <p class="bask-cou">0</p>
