--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
                     </a>
                 </li>
                 <li class="lil">
-                    <a href="about.html">
+                    <a onclick="location.hash = 'about'">
                         О магазине
                     </a>
                 </li>
                 <li class="lil">
-                    <a href="#">
+                    <a onclick="location.hash = 'pay'">
                         Оплата и доставка
                     </a>
                 </li>
@@ -181,7 +181,7 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
         </div>
     </div>
 </footer>
-<script src="src/renderItem.js"></script>
+<!--<script src="src/renderItem.js"></script>-->
 <!--<script src="src/parseJson.js"></script>-->
 <script src="src/script.js"></script>
 
