--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
 <div class="all" style="
 	position: absolute;
 	left: 0;
@@ -168,15 +169,13 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
 <footer id="footer" class="footer">
     <div class="container">
         <div class="footer-text">
-            <p><a href="#">shinigami@gmail.com</a></p>
-            <a href="#" class="faq">FAQs</a>
+            <p><a href="#">shinigamistore.official@gmail.com</a></p>
+
             <a href="tel:+380508505004" class="tel">+38(050)850-50-04</a>
         </div>
         <div class="container">
             <div class="shipping">
-                Доставка по Украине осуществляется службами доставки: «Новая Почта».
-                <br>
-                «Новая Почта» осуществляет доставку до почтового отделения, индекс которого Вы укажите при оформлении заказа.
+                <p>SinigamiStore.com © 2021</p>
             </div>
         </div>
     </div>
@@ -184,6 +183,9 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
 <!--<script src="src/renderItem.js"></script>-->
 <!--<script src="src/parseJson.js"></script>-->
 <script src="src/script.js"></script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
+<script src="src/sendemail.js"></script>
+<script src="src/burger.js"></script>
 
 </body>
 </html>
