--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
                     <a href="https://t.me/ShinigamiShop" target="_blank"><img class="soc" src="img/Telegram.jpg" alt="Telegram"></a>
                 </li>
                 <li class="soc_lil">
-                    <a href="https://www.instagram.com/__yourzayka/" target="_blank"><img class="soc" src="img/instagram.jpg" alt="Instagram"></a>
+                    <a href="https://www.instagram.com/_shinigami.store_/" target="_blank"><img class="soc" src="img/instagram.jpg" alt="Instagram"></a>
                 </li>
             </ul>
             <ul>
@@ -169,7 +169,7 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
 <footer id="footer" class="footer">
     <div class="container">
         <div class="footer-text">
-            <p><a href="#">shinigamistore.official@gmail.com</a></p>
+            <p><a href="mailto:shinigamistore.official@gmail.com">shinigamistore.official@gmail.com</a></p>
 
             <a href="tel:+380508505004" class="tel">+38(050)850-50-04</a>
         </div>
