--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600&display=swap" rel="stylesheet">
-    <!--	<link rel="icon" href="img/2020-10-21 162815.png" type="image/x-icon">-->
-    <!--	<link rel="shortcut icon" href="img/2020-10-21 162815.png" type="image/x-icon">-->
+    <link rel="icon" href="img/LOGO.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/LOGO.png" type="image/x-icon">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -113,9 +113,14 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
     }
 }
 </style>
-<div id="top"></div>
+    <div id="top"></div>
 <header id="header" class="header">
     <div class="topp"></div>
+    <div>
+        <a id="idTop">
+            <img src="img/kisspng-computer-icons-arrow-symbol-contrast-5b35a5c37bc105.7011654215302424995069.jpg" alt="" class="arrow">
+        </a>
+    </div>
     <div class="container">
         <div class="nav">
             <a onclick="location.hash = 'main'">
@@ -170,8 +175,7 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
     <div class="container">
         <div class="footer-text">
             <p><a href="mailto:shinigamistore.official@gmail.com">shinigamistore.official@gmail.com</a></p>
-
-            <a href="tel:+380508505004" class="tel">+38(050)850-50-04</a>
+            <a href="tel:+380500211029" class="tel">+38(050)021-10-29</a>
         </div>
         <div class="container">
             <div class="shipping">
@@ -180,12 +184,9 @@ url('../fonts/Sketch.ttf') format('truetype'), font-weight: normal;
         </div>
     </div>
 </footer>
-<!--<script src="src/renderItem.js"></script>-->
-<!--<script src="src/parseJson.js"></script>-->
 <script src="src/script.js"></script>
 <script src="https://smtpjs.com/v3/smtp.js"></script>
 <script src="src/sendemail.js"></script>
 <script src="src/burger.js"></script>
-
 </body>
 </html>
